--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
     <div class="tab-content" id="tab2">
       <h2 class="headLine">時間割・課題・週末課題</h2>
       <p>　この時間割は、スプレッドシートを直接埋め込んだものです。</p>
-      <p>　スプレッドシートの埋め込みが見れなかったりする人は以下のボタンを押してください。対象のスプレッドシートに直接飛びます。</p>
-      <a href="https://docs.google.com/spreadsheets/d/1yLWe6AD1cDkggYthUu9YZbxUf5GK3as7HVVq-TQZer4" target="_blank">押してみな飛ぶぞ</a>
-      <iframe src="https://docs.google.com/spreadsheets/d/1yLWe6AD1cDkggYthUu9YZbxUf5GK3as7HVVq-TQZer4" width="100%" height="1000px"></iframe>
+      <p>　スプレッドシートの埋め込みが見れなかったりする人は画面右下のボタンを押してください。対象のスプレッドシートに直接飛びます。</p>
+      <div class="button" title="２A時間割に飛ぶ">
+        <a href="https://docs.google.com/spreadsheets/d/1yLWe6AD1cDkggYthUu9YZbxUf5GK3as7HVVq-TQZer4" target="_blank" class="button">押してみな飛ぶぞ</a>
+      </div>
+      <iframe src="https://docs.google.com/spreadsheets/d/1yLWe6AD1cDkggYthUu9YZbxUf5GK3as7HVVq-TQZer4" width="100%" height=""></iframe>
     </div>
     
     <div class="tab-content" id="tab3">
@@ -88,47 +90,6 @@
       </div>
       <div class="newsBox" id="testEnglishNewsBox">
         <h1 class="newsBoxTitle">テスト範囲</h1>
-        <h2 class="headLine">Unit 4-3</h2>
-        <p>①I can't finish washing in such a short time.</p>
-        <p>②We should take our showers quickly.</p>
-        <p>③My host father is good at cooking.</p>
-        <p>④Everyone enjoys his dinners, but there's one problem.</p>
-        <p>⑤He puts too much food on my plate.</p>
-        <h2 class="headLine">Unit 4-3</h2>
-        <p>①I can't finish washing in such a short time.</p>
-        <p>②We should take our showers quickly.</p>
-        <p>③My host father is good at cooking.</p>
-        <p>④Everyone enjoys his dinners, but there's one problem.</p>
-        <p>⑤He puts too much food on my plate.</p>
-        <h2 class="headLine">Unit 4-3</h2>
-        <p>①I can't finish washing in such a short time.</p>
-        <p>②We should take our showers quickly.</p>
-        <p>③My host father is good at cooking.</p>
-        <p>④Everyone enjoys his dinners, but there's one problem.</p>
-        <p>⑤He puts too much food on my plate.</p>
-        <h2 class="headLine">Unit 4-3</h2>
-        <p>①I can't finish washing in such a short time.</p>
-        <p>②We should take our showers quickly.</p>
-        <p>③My host father is good at cooking.</p>
-        <p>④Everyone enjoys his dinners, but there's one problem.</p>
-        <p>⑤He puts too much food on my plate.</p>
-        <h2 class="headLine">Unit 4-3</h2>
-        <p>①I can't finish washing in such a short time.</p>
-        <p>②We should take our showers quickly.</p>
-        <p>③My host father is good at cooking.</p>
-        <p>④Everyone enjoys his dinners, but there's one problem.</p>
-        <p>⑤He puts too much food on my plate.</p>
-        <h2 class="headLine">Unit 4-3</h2>
-        <p>①I can't finish washing in such a short time.</p>
-        <p>②We should take our showers quickly.</p>
-        <p>③My host father is good at cooking.</p>
-        <p>④Everyone enjoys his dinners, but there's one problem.</p>
-        <p>⑤He puts too much food on my plate.</p><h2 class="headLine">Unit 4-3</h2>
-        <p>①I can't finish washing in such a short time.</p>
-        <p>②We should take our showers quickly.</p>
-        <p>③My host father is good at cooking.</p>
-        <p>④Everyone enjoys his dinners, but there's one problem.</p>
-        <p>⑤He puts too much food on my plate.</p>
       </div>
     </div>
     <div class="tab-content" id="tab4">
@@ -429,134 +390,8 @@
       <p>　このサイトを共有したりしなければ外部からアクセスすることはできず、漏洩する可能性は極めて低いです。</p>
       <p>　コピーするときは、メールアドレスが書いてあるボックスを押してください。押すとクリップボードにコピーされます。</p>
       <br>
-      <div class="newsBox">
+      <div class="newsBox" id = mailaddressNewsBox>
         <h1 class="newsBoxTitle">メールアドレス帳</h1>
-        <table>
-          <caption>中尾海裕 先生</caption>
-          <tr>
-            <td class="copyElement">miyuu_nakao@gse.okayama-c.ed.jp</td>
-          </tr>
-        </table>
-        <table>
-          <caption>荻野郁弥 先生</caption>
-          <tr>
-            <td class="copyElement">fumiya_ogino@gse.okayama-c.ed.jp</td>
-          </tr>
-        </table>
-        <table>
-          <caption>岩月理恵 先生</caption>
-          <tr>
-            <td class="copyElement">rie_iwatsuki@gse.okayama-c.ed.jp</td>
-          </tr>
-        </table>
-        <table>
-          <caption>平田周吾 先生</caption>
-          <tr>
-            <td class="copyElement">shiyuugo_hirata@gse.okayama-c.ed.jp</td>
-          </tr>
-        </table>
-        <table>
-          <caption>坪井晶広 先生</caption>
-          <tr>
-            <td class="copyElement">akihiro_tsuboi@gse.okayama-c.ed.jp</td>
-          </tr>
-        </table>
-        <table>
-          <caption>守時和輝 先生</caption>
-          <tr>
-            <td class="copyElement">kazuki_moritoki@gse.okayama-c.ed.jp</td>
-          </tr>
-        </table>
-        <table>
-          <caption>犬束秀一 先生</caption>
-          <tr>
-            <td class="copyElement">shiyuuichi_inutsuka@gse.okayama-c.ed.jp</td>
-          </tr>
-        </table>
-        <table>
-          <caption>福永義弘 先生</caption>
-          <tr>
-            <td class="copyElement">yoshihiro_fukunaga@gse.okayama-c.ed.jp</td>
-          </tr>
-        </table>
-        <table>
-          <caption>操山高校</caption>
-          <tr>
-            <td class="copyElement">sozan01@pref.okayama.jp</td>
-          </tr>
-        </table>
-        <table>
-          <caption>81_21期生</caption>
-          <tr>
-            <td class="copyElement">81_sozan21@gse.okayama-c.ed.jp</td>
-          </tr>
-        </table>
-        <table>
-          <caption>81_R4_1A</caption>
-          <tr>
-            <td class="copyElement">81_sozan_r4_1a@gse.okayama-c.ed.jp</td>
-          </tr>
-        </table>
-        <table>
-          <caption>81_R4_1B</caption>
-          <tr>
-            <td class="copyElement">81_sozan_r4_1b@gse.okayama-c.ed.jp</td>
-          </tr>
-        </table>
-        <table>
-          <caption>81_R4_1C</caption>
-          <tr>
-            <td class="copyElement">81_sozan_r4_1c@gse.okayama-c.ed.jp</td>
-          </tr>
-        </table>
-        <table>
-          <caption>81_岡山操山中学校全生徒【基本グループ】</caption>
-          <tr>
-            <td class="copyElement">81_sozan-jhs-students@gse.okayama-c.ed.jp</td>
-          </tr>
-        </table>
-        <table>
-          <caption>81_岡山操山中学校全教職員【基本グループ】</caption>
-          <tr>
-            <td class="copyElement">81_sozan-jhs-teachers@gse.okayama-c.ed.jp</td>
-          </tr>
-        </table>
-        <table>
-          <caption>岡山操山中学校管理者01</caption>
-          <tr>
-            <td class="copyElement">sozan-jhs-admin01@gse.okayama-c.ed.jp</td>
-          </tr>
-        </table>
-        <table>
-          <caption>岡山操山中学校管理者02</caption>
-          <tr>
-            <td class="copyElement">sozan-jhs-admin02@gse.okayama-c.ed.jp</td>
-          </tr>
-        </table>
-        <table>
-          <caption>岡山操山中学校管理者03</caption>
-          <tr>
-            <td class="copyElement">sozan-jhs-admin03@gse.okayama-c.ed.jp</td>
-          </tr>
-        </table>
-        <table>
-          <caption>02_岡山操山高等学校全教職員【基本グループ】</caption>
-          <tr>
-            <td class="copyElement">02_sozan-teachers@gse.okayama-c.ed.jp</td>
-          </tr>
-        </table>
-        <table>
-          <caption>02_岡山操山高等学校全生徒【基本グループ】</caption>
-          <tr>
-            <td class="copyElement">02_sozan-students@gse.okayama-c.ed.jp</td>
-          </tr>
-        </table>
-        <table>
-          <caption>03_岡山操山高等学校（通信制）全教職員【基本グループ】</caption>
-          <tr>
-            <td class="copyElement">03_sozan-c-teachers@gse.okayama-c.ed.jp</td>
-          </tr>
-        </table>
         <table class="gradeChange">
           <caption>学年切り替え</caption>
           <tr>
@@ -577,7 +412,7 @@
       </div>
     </div>
   </div>
-  <Script src="src/dataFetch.js"></script>
+  <script src="src/English.js"></script>
   <script src="src/date.js"></script>
   <script src="src/mailaddress.js"></script>
   <script src="src/tab.js"></script>
@@ -592,7 +427,7 @@
       });
     }
   </script>
-  
+
 </body>
   
 </html>
