--- a/index.html
+++ b/index.html
@@ -58,11 +58,17 @@
         <br>③ホーム画面に表示されれば成功です</p>
       </div>
       <p>　もし、不明点などがありましたら、お気軽にお尋ねください。多分答えます。</p>
+      <h2 class="headLine">告知</h2>
+      <p>　告知です。当サイトは常に人材を募集しています。以下のような方を募集しています。
+      <br>・データいじり人（データを編集します。）
+      <br>・開発者（当サイトに新機能を追加したり、バグを修正したりします。）
+      <br>・デザイナー(サイトのアイコン、アプリ名を決めます。)
+      <br>以上。興味があれば言ってみてね。</p>
       <h2 class="headLine">ニュース</h2>
       <ul class="newsList">
       </ul>
     </div>
-
+    
     <div class="tab-content" id="tab2">
       <h2 class="headLine">時間割・課題・週末課題</h2>
       <p>　この時間割は、スプレッドシートを直接埋め込んだものです。</p>
