--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     <a href="#" class="tab-link" data-tab="tab5" id="mailaddressTab">メアド</a>
   </div>
 
+  <!-- 更新ボタン -->
+　<button id="reloadButton" title="サイトを更新" onclick="window.location.reload();">
+    <img src="img/reload.png" alt="">
+  </button>
+  
   <div class="tab-container">
     <div class="tab-content" id="tab1">
       <h1 class="homeTitle">もう迷わない。英語の五文</h1>
